water jug modified, 8 puzzle start

--- a/P1_water_jug.ipynb
+++ b/P1_water_jug.ipynb
@@ -49,48 +49,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jug1 capacity: 7 litres, Jug2 capacity: 5 litres, Target: 4 litres\n",
+      "Jug1 capacity: 3 litres, Jug2 capacity: 5 litres, Target: 4 litres\n",
       "Queue: deque([(0, 0)])\n",
-      "Filling jug1: 7 litres\n",
-      "state: (7, 0)\n",
+      "Filling jug1: 3 litres\n",
+      "state: (3, 0)\n",
       "Filling jug2: 5 litres\n",
       "state: (0, 5)\n",
-      "Queue: deque([(7, 0), (0, 5)])\n",
+      "Queue: deque([(3, 0), (0, 5)])\n",
       "Filling jug2: 5 litres\n",
-      "state: (7, 5)\n",
-      "Pouring jug1 into jug2: 5 litres\n",
-      "state: (2, 5)\n",
-      "Queue: deque([(0, 5), (7, 5), (2, 5)])\n",
-      "Pouring jug2 into jug1: 5 litres\n",
-      "state: (5, 0)\n",
-      "Queue: deque([(7, 5), (2, 5), (5, 0)])\n",
-      "Queue: deque([(2, 5), (5, 0)])\n",
-      "Emptying jug2\n",
-      "state: (2, 0)\n",
-      "Queue: deque([(5, 0), (2, 0)])\n",
-      "Filling jug2: 5 litres\n",
-      "state: (5, 5)\n",
-      "Queue: deque([(2, 0), (5, 5)])\n",
-      "Pouring jug1 into jug2: 2 litres\n",
-      "state: (0, 2)\n",
-      "Queue: deque([(5, 5), (0, 2)])\n",
-      "Pouring jug2 into jug1: 2 litres\n",
-      "state: (7, 3)\n",
-      "Queue: deque([(0, 2), (7, 3)])\n",
-      "Filling jug1: 7 litres\n",
-      "state: (7, 2)\n",
-      "Queue: deque([(7, 3), (7, 2)])\n",
-      "Emptying jug1\n",
-      "state: (0, 3)\n",
-      "Queue: deque([(7, 2), (0, 3)])\n",
+      "state: (3, 5)\n",
       "Pouring jug1 into jug2: 3 litres\n",
-      "state: (4, 5)\n",
-      "Queue: deque([(0, 3), (4, 5)])\n",
+      "state: (0, 3)\n",
+      "Queue: deque([(0, 5), (3, 5), (0, 3)])\n",
       "Pouring jug2 into jug1: 3 litres\n",
-      "state: (3, 0)\n",
-      "Queue: deque([(4, 5), (3, 0)])\n",
+      "state: (3, 2)\n",
+      "Queue: deque([(3, 5), (0, 3), (3, 2)])\n",
+      "Queue: deque([(0, 3), (3, 2)])\n",
+      "Filling jug1: 3 litres\n",
+      "state: (3, 3)\n",
+      "Queue: deque([(3, 2), (3, 3)])\n",
+      "Emptying jug1\n",
+      "state: (0, 2)\n",
+      "Queue: deque([(3, 3), (0, 2)])\n",
+      "Pouring jug1 into jug2: 2 litres\n",
+      "state: (1, 5)\n",
+      "Queue: deque([(0, 2), (1, 5)])\n",
+      "Pouring jug2 into jug1: 2 litres\n",
+      "state: (2, 0)\n",
+      "Queue: deque([(1, 5), (2, 0)])\n",
+      "Emptying jug2\n",
+      "state: (1, 0)\n",
+      "Queue: deque([(2, 0), (1, 0)])\n",
+      "Filling jug2: 5 litres\n",
+      "state: (2, 5)\n",
+      "Queue: deque([(1, 0), (2, 5)])\n",
+      "Pouring jug1 into jug2: 1 litres\n",
+      "state: (0, 1)\n",
+      "Queue: deque([(2, 5), (0, 1)])\n",
+      "Pouring jug2 into jug1: 1 litres\n",
+      "state: (3, 4)\n",
+      "Queue: deque([(0, 1), (3, 4)])\n",
+      "Filling jug1: 3 litres\n",
+      "state: (3, 1)\n",
+      "Queue: deque([(3, 4), (3, 1)])\n",
       "Reached target: 4 litres\n",
-      "Final state: (4, 5)\n"
+      "Final state: (3, 4)\n"
      ]
     }
    ],
@@ -111,6 +114,7 @@
     "    print(f'Queue: {q}')\n",
     "\n",
     "    while q:\n",
+    "        \n",
     "        jug1, jug2 = q.popleft()\n",
     "\n",
     "        if jug1 == d or jug2 == d:\n",
@@ -179,6 +183,171 @@
     "\n",
     "    (water_jug(cap_a, cap_b, d))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "511211cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jug1 capacity: 3 litres, Jug2 capacity: 5 litres, Target: 4 litres\n",
+      "Queue: deque([(0, 0)])\n",
+      "Filling jug1: 3 litres\n",
+      "state: (3, 0)\n",
+      "Filling jug2: 5 litres\n",
+      "state: (0, 5)\n",
+      "Queue: deque([(3, 0), (0, 5)])\n",
+      "Filling jug2: 5 litres\n",
+      "state: (3, 5)\n",
+      "Pouring jug1 into jug2: 3 litres\n",
+      "state: (0, 3)\n",
+      "Queue: deque([(0, 5), (3, 5), (0, 3)])\n",
+      "Pouring jug2 into jug1: 3 litres\n",
+      "state: (3, 2)\n",
+      "Queue: deque([(3, 5), (0, 3), (3, 2)])\n",
+      "Queue: deque([(0, 3), (3, 2)])\n",
+      "Filling jug1: 3 litres\n",
+      "state: (3, 3)\n",
+      "Queue: deque([(3, 2), (3, 3)])\n",
+      "Emptying jug1\n",
+      "state: (0, 2)\n",
+      "Queue: deque([(3, 3), (0, 2)])\n",
+      "Pouring jug1 into jug2: 2 litres\n",
+      "state: (1, 5)\n",
+      "Queue: deque([(0, 2), (1, 5)])\n",
+      "Pouring jug2 into jug1: 2 litres\n",
+      "state: (2, 0)\n",
+      "Queue: deque([(1, 5), (2, 0)])\n",
+      "Emptying jug2\n",
+      "state: (1, 0)\n",
+      "Queue: deque([(2, 0), (1, 0)])\n",
+      "Filling jug2: 5 litres\n",
+      "state: (2, 5)\n",
+      "Queue: deque([(1, 0), (2, 5)])\n",
+      "Pouring jug1 into jug2: 1 litres\n",
+      "state: (0, 1)\n",
+      "Queue: deque([(2, 5), (0, 1)])\n",
+      "Pouring jug2 into jug1: 1 litres\n",
+      "state: (3, 4)\n",
+      "Queue: deque([(0, 1), (3, 4)])\n",
+      "Filling jug1: 3 litres\n",
+      "state: (3, 1)\n",
+      "Queue: deque([(3, 4), (3, 1)])\n",
+      "Reached target: 4 litres\n",
+      "Final state: (0, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "\n",
+    "def water_jug(cap_a, cap_b, d):\n",
+    "\n",
+    "    if d > max(cap_a, cap_b) and d > (cap_a + cap_b):\n",
+    "        return -1 \n",
+    "\n",
+    "    q = deque([(0, 0)])\n",
+    "    \n",
+    "    visited = [[False] * (cap_b + 1) for _ in range(cap_a + 1)]  \n",
+    "    visited[0][0] = True\n",
+    "\n",
+    "    print(f'Queue: {q}')\n",
+    "\n",
+    "    while q:\n",
+    "        \n",
+    "        jug1, jug2 = q.popleft()\n",
+    "\n",
+    "        if jug1 == d:\n",
+    "            print(f\"Reached target: {d} litres\")\n",
+    "            jug2 = 0\n",
+    "            print(f\"Final state: ({jug1}, {jug2})\")\n",
+    "            return\n",
+    "        \n",
+    "        elif jug2 == d:\n",
+    "            print(f\"Reached target: {d} litres\")\n",
+    "            jug1 = 0\n",
+    "            print(f\"Final state: ({jug1}, {jug2})\")\n",
+    "            return\n",
+    "\n",
+    "        elif jug1 + jug2 == d:\n",
+    "            print(f\"Reached target: {d} litres\")\n",
+    "            print(f\"Final state: ({jug1}, {jug2})\")\n",
+    "            return\n",
+    "\n",
+    "\n",
+    "        # 1: Fill jug1\n",
+    "        if not visited[cap_a][jug2]:\n",
+    "            visited[cap_a][jug2] = True\n",
+    "            print(f\"Filling jug1: {cap_a} litres\")\n",
+    "            print(f\"state: ({cap_a}, {jug2})\")\n",
+    "            q.append((cap_a, jug2))\n",
+    "\n",
+    "        # 2: Fill jug2\n",
+    "        if not visited[jug1][cap_b]:\n",
+    "            visited[jug1][cap_b] = True\n",
+    "            print(f\"Filling jug2: {cap_b} litres\")\n",
+    "            print(f\"state: ({jug1}, {cap_b})\")\n",
+    "            q.append((jug1, cap_b))\n",
+    "\n",
+    "        # 3: Empty jug1\n",
+    "        if not visited[0][jug2]:\n",
+    "            visited[0][jug2] = True\n",
+    "            print(f\"Emptying jug1\")\n",
+    "            print(f\"state: (0, {jug2})\")\n",
+    "            q.append((0, jug2))\n",
+    "\n",
+    "        # 4: Empty jug2\n",
+    "        if not visited[jug1][0]:\n",
+    "            visited[jug1][0] = True\n",
+    "            print(f\"Emptying jug2\")\n",
+    "            print(f\"state: ({jug1}, 0)\")\n",
+    "            q.append((jug1, 0))\n",
+    "\n",
+    "        # 5: Pour jug1 into jug2\n",
+    "        pour1to2 = min(jug1, cap_b - jug2)\n",
+    "        if not visited[jug1 - pour1to2][jug2 + pour1to2]:\n",
+    "            visited[jug1 - pour1to2][jug2 + pour1to2] = True\n",
+    "            print(f\"Pouring jug1 into jug2: {pour1to2} litres\")\n",
+    "            print(f\"state: ({jug1 - pour1to2}, {jug2 + pour1to2})\")\n",
+    "            q.append((jug1 - pour1to2, jug2 + pour1to2))\n",
+    "\n",
+    "        # 6: Pour jug2 into jug1\n",
+    "        pour2to1 = min(jug2, cap_a - jug1)\n",
+    "        if not visited[jug1 + pour2to1][jug2 - pour2to1]:\n",
+    "            visited[jug1 + pour2to1][jug2 - pour2to1] = True\n",
+    "            print(f\"Pouring jug2 into jug1: {pour2to1} litres\")\n",
+    "            print(f\"state: ({jug1 + pour2to1}, {jug2 - pour2to1})\")\n",
+    "            q.append((jug1 + pour2to1, jug2 - pour2to1))\n",
+    "\n",
+    "        print(f'Queue: {q}')\n",
+    "\n",
+    "    return -1  \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "  \n",
+    "    # jug1 = 4 litre, jug2 = 3 litre \n",
+    "    # cap_a, cap_b, d = 4, 3, 2\n",
+    "    cap_a = int(input(\"Capacity of jug1\"))\n",
+    "    cap_b = int( input(\"Capacity of jug2: \"))\n",
+    "    d = int(input(\"Amount of water to calculate:\"))\n",
+    "\n",
+    "    print(f\"Jug1 capacity: {cap_a} litres, Jug2 capacity: {cap_b} litres, Target: {d} litres\")\n",
+    "\n",
+    "    (water_jug(cap_a, cap_b, d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5e27d81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
