--- a/P2_8_puzzle.ipynb
+++ b/P2_8_puzzle.ipynb
@@ -8,7 +8,6 @@
    "outputs": [],
    "source": [
     "import heapq\n",
-    "import copy\n",
     "\n",
     "class PuzzleNode:\n",
     "    \"\"\"\n",
@@ -28,7 +27,16 @@
     "\n",
     "    def __eq__(self, other):\n",
     "        # Equality check for states\n",
-    "        return self.state == other.state\n",
+    "        return self.state == other.state\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "287d3680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def print_board(state):\n",
     "    \"\"\"Prints the 3x3 board.\"\"\"\n",
@@ -98,11 +106,20 @@
     "    open_list = [start_node] # Priority queue\n",
     "    closed_list = set()\n",
     "    step = 0\n",
+    "    max_steps = 200 # Set the maximum number of steps\n",
     "\n",
     "    print(f\"--- Starting {algorithm} with {heuristic_func.__name__} ---\")\n",
     "    \n",
     "    while open_list:\n",
     "        step += 1\n",
+    "        \n",
+    "        # <<< --- ADDED STOP FEATURE --- >>>\n",
+    "        if step > max_steps:\n",
+    "            print(f\"--- Step {step} ---\")\n",
+    "            print(f\"Search terminated: Exceeded maximum of {max_steps} steps.\")\n",
+    "            return\n",
+    "        # <<< --- END OF ADDED FEATURE --- >>>\n",
+    "\n",
     "        current_node = heapq.heappop(open_list)\n",
     "        \n",
     "        # Convert list of lists to tuple of tuples to add to set\n",
@@ -149,20 +166,29 @@
     "        print(\"\\nOpen List (Top 5 states by f-value):\")\n",
     "        for i, node in enumerate(heapq.nsmallest(5, open_list)):\n",
     "            print(f\"  {i+1}. f={node.f}, g={node.g}, h={node.h}\")\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6fbfa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    # A solvable initial state\n",
+    "\n",
     "    initial_state = [\n",
-    "        [2, 8, 3],\n",
-    "        [1, 6, 4],\n",
-    "        [7, 0, 5]\n",
+    "        [1, 2, 3],\n",
+    "        [0, 4, 5],\n",
+    "        [6, 7, 8]\n",
     "    ]\n",
     "\n",
     "    goal_state = [\n",
     "        [1, 2, 3],\n",
-    "        [4, 5, 6],\n",
-    "        [7, 8, 0]\n",
+    "        [4, 0, 5],\n",
+    "        [6, 7, 8]\n",
     "    ]\n",
     "\n",
     "    print(\"Initial State:\")\n",
@@ -170,23 +196,49 @@
     "    print(\"Goal State:\")\n",
     "    print_board(goal_state)\n",
     "\n",
-    "    # Case 1: A* with Misplaced Tiles\n",
-    "    solve_puzzle(initial_state, goal_state, 'A*', h1_misplaced_tiles)\n",
     "\n",
-    "    # Case 2: A* with Manhattan Distance\n",
-    "    solve_puzzle(initial_state, goal_state, 'A*', h2_manhattan_distance)\n",
+    "    print(\"select your preferered algorithm and heuristic (A* or BFS, h1 or h2): \\n 1. A* with Misplaced Tiles\\n 2. A* with Manhattan Distance\\n 3. Best-First Search with Misplaced Tiles\\n 4. Best-First Search with Manhattan Distance\\n\")\n",
+    "    switch = input(\"Enter your choice (1-4): \")\n",
+    "    # Based on the input, we can choose the algorithm and heuristic\n",
+    "    if switch == '1':\n",
+    "        solve_puzzle(initial_state, goal_state, 'A*', h1_misplaced_tiles)\n",
+    "    elif switch == '2':\n",
+    "        solve_puzzle(initial_state, goal_state, 'A*', h2_manhattan_distance)\n",
+    "    elif switch == '3':\n",
+    "        solve_puzzle(initial_state, goal_state, 'BFS', h1_misplaced_tiles)\n",
+    "    elif switch == '4':\n",
+    "        solve_puzzle(initial_state, goal_state, 'BFS', h2_manhattan_distance)\n",
+    "    # # Case 1: A* with Misplaced Tiles\n",
+    "    # solve_puzzle(initial_state, goal_state, 'A*', h1_misplaced_tiles)\n",
+    "\n",
+    "    # # Case 2: A* with Manhattan Distance\n",
+    "    # solve_puzzle(initial_state, goal_state, 'A*', h2_manhattan_distance)\n",
     "    \n",
-    "    # Case 3: Best-First Search with Misplaced Tiles\n",
-    "    solve_puzzle(initial_state, goal_state, 'BFS', h1_misplaced_tiles)\n",
+    "    # # Case 3: Best-First Search with Misplaced Tiles\n",
+    "    # solve_puzzle(initial_state, goal_state, 'BFS', h1_misplaced_tiles)\n",
     "    \n",
-    "    # Case 4: Best-First Search with Manhattan Distance\n",
-    "    solve_puzzle(initial_state, goal_state, 'BFS', h2_manhattan_distance)"
+    "    # # Case 4: Best-First Search with Manhattan Distance\n",
+    "    # solve_puzzle(initial_state, goal_state, 'BFS', h2_manhattan_distance)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
